perf : compressed banner image

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
 
         <div class="banner">
-            <img src="/assets/login-img.jpg" />
+            <img src="/assets/login-img.jpg" alt="banner-img" />
             <div class="banner-content">
 
                 <h1>EVERYTHING YOU NEED FOR YOUR COSMIC LEAP</h1>
