fix : path of wishlist and cart on signup page

--- a/pages/signup/signup.html
+++ b/pages/signup/signup.html
@@ -27,14 +27,14 @@
                 <button class="btn btn-primary"><a href="../login/login.html">Login</a></button>
 
                 <div class="badge navbar-icon">
-                    <a href="/wishlist/wishlist.html"><i class="fas fa-heart fa-2x"></i></a>
+                    <a href="../wishlist/wishlist.html"><i class="fas fa-heart fa-2x"></i></a>
                     <div class="notification notification-badge">
                         <span>2</span>
                     </div>
                 </div>
 
                 <div class="badge navbar-icon">
-                    <a href="/cart/cart.html"><i class="fas fa-shopping-cart fa-2x"></i></a>
+                    <a href="../cart/cart.html"><i class="fas fa-shopping-cart fa-2x"></i></a>
                     <div class="notification notification-badge">
                         <span>2</span>
                     </div>
